# sexagesimal

./: .gitignore  default.nix  flake.nix  sexagesimal.cabal
app/: Main.hs
src/Numeric/: Sexagesimal.hs
test/: Main.hs
