cabal-version:      3.0
name:               sexagesimal
version:            1.0.0.0
synopsis:           Conversion of numbers to and from sexagesimal (base 60) notation
license:            Apache-2.0
license-file:       LICENSE
author:             Neil Mayhew
maintainer:         neil@mayhew.name
copyright:          2023

common warnings
  ghc-options: -Wall

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   src
  exposed-modules:  Numeric.Sexagesimal
  build-depends:
    , base

executable sexagesimal
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , optparse-applicative
    , sexagesimal
    , terminal-size

test-suite sexagesimal-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , sexagesimal
    , hspec
